jes log and jobs

--- a/baseliner.conf
+++ b/baseliner.conf
@@ -7,7 +7,7 @@ LongReadLen 100000000
 LongTruncOk 0
 host localhost
 web_host localhost
-job_runner service.job.runner.chained.rule
+job_runner service.job.runner.simple.chain
 
 <About>
 	version 5.0.3 (build 956)
