--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "features/nature.ejava"]
 	path = features/nature.ejava
 	url = http://git.vasslabs.com/git/nature.ejava.git
+[submodule "features/clarive.core"]
+	path = features/clarive.core
+	url = http://git.vasslabs.com/git/clarive.core.git
