--- a/etc/lc.yaml
+++ b/etc/lc.yaml
@@ -3,10 +3,12 @@ nodes:
       node: Tasks
       type: component
       url : /task/grid
+      icon: /static/images/icons/tasks.gif
     - 
       node: Jobs
       type: component
       url : /job/monitor
+      icon: /static/images/icons/job.png
     - 
       node: Releases
       type: component
