--- a/etc/lc.yaml
+++ b/etc/lc.yaml
@@ -40,9 +40,7 @@ lifecycle:
               type: state
               active: 1
               bl: DESA
-              bl_from:
-                  - DESA
-                  - new
+              bl_from: DESA
               bl_to: TEST
               icon: /static/images/icons/lc/history.gif
             -
@@ -55,15 +53,15 @@ lifecycle:
             -
               node: Preproduction
               type: state
-              bl: PREP
+              bl: ANTE
               bl_from: TEST
-              bl_to: PREP
+              bl_to: PROD
               icon: /static/images/icons/lc/history.gif
             -
               node: Production
               type: state
               bl: PROD
-              bl_from: PREP
+              bl_from: ANTE
               bl_to: PROD
               icon: /static/images/icons/lc/history.gif
 projects:
