--- a/baseliner_bde.conf
+++ b/baseliner_bde.conf
@@ -1,12 +1,19 @@
 host localhost
 web_host localhost
 default_lang es
+decrypt_key 1234567
 ldap no
+default_theme bde
+toolbar_height 45
+
+<header_init>
+show_lifecycle 0
+</header_init>
 
 <Model::Baseliner>
     connect_info        dbi:Oracle:host=localhost;sid=scm;port=1521
     connect_info        wtscm4
-    connect_info        wtscm4
+    connect_info        __decrypt(usx+yBCMQqwA)__
     <connect_info>
         LongReadLen     100000000
         LongTruncOk     1
@@ -36,7 +43,7 @@ ldap no
 				class Minimal
 				<users>
 					<root>
-						password admin
+						password __decrypt(6gIh7D1ZLs8A)__
 					</root>
 				</users>
 			</store>
