--- a/baseliner_bcv.conf
+++ b/baseliner_bcv.conf
@@ -25,3 +25,65 @@ default_lang es
     </connect_info>
 	on_connect_do       alter session set nls_date_format='yyyy-mm-dd hh24:mi:ss'
 </Model::Harvest>
+
+<authentication>
+    default_realm ldap
+    <realms>
+		<local>
+            <credential>
+				class Password
+				password_field password
+				password_type clear
+            </credential>
+			<store>
+				class Minimal
+				<users>
+					<root>
+						password admin
+					</root>
+				</users>
+			</store>
+		</local>
+		<none>
+			<credential>
+                class Password
+                password_field password
+                password_type none
+			</credential>
+			<store>
+				class Null
+			</store>
+		</none>
+
+        <ldap>
+            <store>
+		binddn CN=lectorad,OU=Usuarios,DC=cajasol,DC=ad
+                bindpw lector
+                ldap_server cajasol.ad
+                <ldap_server_options>
+                    timeout 30
+                </ldap_server_options>
+                use_roles   0
+                user_basedn OU=Usuarios,DC=cajasol,DC=ad
+                user_field  uid
+                user_filter (&(objectclass=person)(uid=%s))
+            </store>
+        </ldap>
+        <ldap_no_pw>
+            <store>
+		binddn CN=lectorad,OU=Usuarios,DC=cajasol,DC=ad
+                bindpw lector
+                ldap_server cajasol.ad
+                <ldap_server_options>
+                    timeout 30
+                </ldap_server_options>
+                use_roles   0
+                user_basedn OU=Usuarios,DC=cajasol,DC=ad
+                user_field  uid
+                user_filter (&(objectclass=person)(uid=%s))
+            </store>
+        </ldap_no_pw>
+    </realms>
+</authentication>
+
+
