bcv ldap config

--- a/baseliner_bcv.conf
+++ b/baseliner_bcv.conf
@@ -57,30 +57,30 @@ default_lang es
 
         <ldap>
             <store>
-		binddn CN=lectorad,OU=Usuarios,DC=cajasol,DC=ad
+                binddn CN=lectorad,OU=Usuarios,DC=cajasol,DC=ad
                 bindpw lector
                 ldap_server cajasol.ad
                 <ldap_server_options>
                     timeout 30
                 </ldap_server_options>
                 use_roles   0
-                user_basedn OU=Usuarios,DC=cajasol,DC=ad
-                user_field  uid
-                user_filter (&(objectclass=person)(uid=%s))
+                user_basedn dc=cajasol,dc=ad
+                user_field  samaccountname
+                user_filter (&(objectclass=Person)(sAMAccountName=%s))
             </store>
         </ldap>
         <ldap_no_pw>
             <store>
-		binddn CN=lectorad,OU=Usuarios,DC=cajasol,DC=ad
+                binddn CN=lectorad,OU=Usuarios,DC=cajasol,DC=ad
                 bindpw lector
                 ldap_server cajasol.ad
                 <ldap_server_options>
                     timeout 30
                 </ldap_server_options>
                 use_roles   0
-                user_basedn OU=Usuarios,DC=cajasol,DC=ad
-                user_field  uid
-                user_filter (&(objectclass=person)(uid=%s))
+                user_basedn dc=cajasol,dc=ad
+                user_field  samaccountname
+                user_filter (&(objectclass=Person)(sAMAccountName=%s))
             </store>
         </ldap_no_pw>
     </realms>
