--- a/baseliner_ante.conf
+++ b/baseliner_ante.conf
@@ -2,6 +2,7 @@ host alfsv053
 web_host alfsv053
 default_lang es
 user_case lc
+logo_filename logo_ante.png
 
 <email_override>
 	q74612x@correo.interno
