--- a/baseliner_prod.conf
+++ b/baseliner_prod.conf
@@ -1,35 +1,9 @@
-name Baseliner
-default_lang es
-default_theme gray
-json_driver JSON::XS
-time_zone CET
-LongReadLen 100000000
-LongTruncOk 0
 host expsv011
 web_host expsv011
 user_case lc
 saml_auth on
 saml_header samlv20
-
-<About>
-	version 5.0.3 (build 956)
-</About>
-
-<PluginNamespace>
-	prefix BaselinerX
-</PluginNamespace>
-
-<Plugin::I18N>
-	languages es
-    <maketext_options>
-        Style gettext
-        Decode 1
-    </maketext_options>
-</Plugin::I18N>
-
-<Baseliner::View::JSON>
-    decode_utf8 0
-</Baseliner::View::JSON>
+logo_filename logo.png
 
 dec_key 1234567
 
@@ -86,6 +60,7 @@ extjs2   /static/ext
 </Plugin::Cache>
 
 <session>
+    expires 604800
     cache_size 15m
     verify_address 0
 </session>
