--- a/baseliner_test.conf
+++ b/baseliner_test.conf
@@ -4,6 +4,7 @@ default_lang es
 saml_auth on
 saml_header samlv20
 user_case lc
+logo_filename logo_test.png
 
 <email_override>
 	q74612x@correo.interno
