prod - piloto no bugs

--- a/features/bde/bde.conf
+++ b/features/bde/bde.conf
@@ -23,5 +23,9 @@ login_logo /static/themes/bde/images/logo_big.jpg
           menu.job.revisions
           menu.job.request
           menu.admin.service
+          menu.admin.espacio
+          menu.admin.cargaldif
+          action.surrogate
+          menu.development
     </disabled_keys>
 </registry>
