--- a/baseliner_bde.conf
+++ b/baseliner_bde.conf
@@ -3,11 +3,11 @@ web_host localhost
 default_lang es
 decrypt_key 1234567
 ldap no
-default_theme bde
-toolbar_height 45
+#default_theme clarive
+#toolbar_height 45
 
 <header_init>
-show_lifecycle 0
+show_lifecycle 1
 </header_init>
 
 <Model::Baseliner>
@@ -43,8 +43,11 @@ show_lifecycle 0
 				class Minimal
 				<users>
 					<root>
-						password __decrypt(6gIh7D1ZLs8A)__
+						password 21232f297a57a5a743894a0e4a801fc3
 					</root>
+					<rick>
+						password 891f490e5d7bdb06d90d56f8d7db405f
+					</rick>
 				</users>
 			</store>
 		</local>
