Control del password por base de datos

--- a/baseliner.conf
+++ b/baseliner.conf
@@ -73,31 +73,32 @@ extjs2   /static/ext
 <authentication>
     default_realm ldap
     <realms>
-		<local>
+	<local>
             <credential>
-				class Password
-				password_field password
-				password_type clear
+                class Password
+                password_field password
+		password_type clear
             </credential>
-			<store>
-				class Minimal
-				<users>
-					<root>
-						password admin
-					</root>
-				</users>
-			</store>
-		</local>
-		<none>
-			<credential>
+            <store>
+                class Minimal
+                <users>
+                    <root>
+                        password 21232f297a57a5a743894a0e4a801fc3
+                    </root>
+                </users>
+	    </store>
+	</local>
+        
+	<none>
+            <credential>
                 class Password
                 password_field password
                 password_type none
-			</credential>
-			<store>
-				class Null
-			</store>
-		</none>
+            </credential>
+            <store>
+		class Null
+            </store>
+	</none>
 
         <ldap>
             <credential>
@@ -118,6 +119,7 @@ extjs2   /static/ext
                 user_filter (&(objectclass=Person)(sAMAccountName=%s))
             </store>
         </ldap>
+        
         <ldap_no_pw>
             <credential>
                 class Password
