control ldap/baliuser

--- a/baseliner.conf
+++ b/baseliner.conf
@@ -71,7 +71,7 @@ extjs2   /static/ext
 
 # LDAP
 <authentication>
-    default_realm ldap
+    default_realm none  # none or ldap
     <realms>
 	<local>
             <credential>
