mejora en encriptacion de password

--- a/baseliner.conf
+++ b/baseliner.conf
@@ -1,6 +1,7 @@
 name Baseliner
 default_lang en
 default_theme gray
+decrypt_key 1234567
 json_driver JSON::XS
 time_zone CET
 LongReadLen 100000000
