ic lifecycle and config

--- a/baseliner_infocaja.conf
+++ b/baseliner_infocaja.conf
@@ -4,7 +4,7 @@ default_lang es
 decrypt_key 1234567
 ldap no
 default_theme clarive
-toolbar_height 45
+#toolbar_height 45
 
 <header_init>
 show_lifecycle 1
