--- a/baseliner_bde.conf
+++ b/baseliner_bde.conf
@@ -43,7 +43,7 @@ show_lifecycle 0
 				class Minimal
 				<users>
 					<root>
-						password __decrypt(6gIh7D1ZLs8A)__
+						password 21232f297a57a5a743894a0e4a801fc3
 					</root>
 				</users>
 			</store>
