--- a/baseliner_infocaja.conf
+++ b/baseliner_infocaja.conf
@@ -44,7 +44,7 @@ show_lifecycle 1
 				class Minimal
 				<users>
 					<root>
-						password __decrypt(6gIh7D1ZLs8A)__
+						password 21232f297a57a5a743894a0e4a801fc3
 					</root>
 				</users>
 			</store>
