to_char removed fom issues in dashboard

--- a/baseliner_bde.conf
+++ b/baseliner_bde.conf
@@ -13,7 +13,8 @@ show_lifecycle 1
 <Model::Baseliner>
     connect_info        dbi:Oracle:host=localhost;sid=scm;port=1521
     connect_info        wtscm4
-    connect_info        __decrypt(usx+yBCMQqwA)__
+#    connect_info        __decrypt(usx+yBCMQqwA)__
+    connect_info        wtscm4
     <connect_info>
         LongReadLen     100000000
         LongTruncOk     1
