--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "features/ca.harvest"]
 	path = features/ca.harvest
 	url = http://git.vasslabs.com/git/ca.harvest.git
+[submodule "features/cia"]
+	path = features/cia
+	url = http://git.vasslabs.com/git/cia.git
