Changes for changeman

--- a/baseliner_infocaja.conf
+++ b/baseliner_infocaja.conf
@@ -32,7 +32,7 @@ show_lifecycle 1
 </Model::Harvest>
 
 <authentication>
-    default_realm ldap
+    default_realm none
     <realms>
 		<local>
             <credential>
@@ -46,6 +46,9 @@ show_lifecycle 1
 					<root>
 						password 21232f297a57a5a743894a0e4a801fc3
 					</root>
+					<rick>
+						password 21232f297a57a5a743894a0e4a801fc3
+					</rick>
 				</users>
 			</store>
 		</local>
