--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "features/bde.core"]
 	path = features/bde.core
 	url = http://git.vasslabs.com/git/bde.core.git
+[submodule "features/sonar"]
+	path = features/sonar
+	url = http://git.vasslabs.com/git/sonar.git
