--- a/baseliner_t.conf
+++ b/baseliner_t.conf
@@ -7,17 +7,7 @@ ldap off
     connect_info        dbi:SQLite:t/balitest.db
     connect_info        
     connect_info        
+    <connect_info>
+        sqlite_unicode      1
+    </connect_info>
 </Model::Baseliner>
-
-<Model::Harvest>
-    connect_info        dbi:SQLite:t/balitest.db
-    connect_info        
-    connect_info        
-</Model::Harvest>
-
-<Model::INF>
-    connect_info        dbi:SQLite:t/balitest.db
-    connect_info        
-    connect_info        
-</Model::INF>
-
