--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "features/reports"]
 	path = features/reports
 	url = http://git.vasslabs.com/git/reports.git
+[submodule "features/svnscm"]
+	path = features/svnscm
+	url = http://git.vasslabs.com/git/svnscm.git
