--- a/db/sample/es/BaliPost.yaml
+++ b/db/sample/es/BaliPost.yaml
@@ -8,7 +8,7 @@
   created_by: root
   created_on: 2012-07-31 17:21:13
   mid: 8
-  text: uno​
+  text: uno
 - content_type: html
   created_by: root
   created_on: 2012-07-31 17:21:17
