commit en prod previo al inicio de los cambios de chm

--- a/baseliner.conf
+++ b/baseliner.conf
@@ -30,35 +30,7 @@ user_case lc
     decode_utf8 0
 </Baseliner::View::JSON>
 
-<Model::Baseliner>
-    connect_info        dbi:Oracle:host=expsv004;sid=EXP0;port=1523
-    connect_info        wtscm4
-    connect_info        wtscm4
-    <connect_info>
-        LongReadLen     100000000
-        LongTruncOk     1
-    </connect_info>
-</Model::Baseliner>
 
-<Model::Harvest>
-    connect_info        dbi:Oracle:host=expsvb05;sid=PSCM;port=1521
-    connect_info        wtscm1
-    connect_info        havest01
-    <connect_info>
-        LongReadLen     100000000
-        LongTruncOk     1
-    </connect_info>
-</Model::Harvest>
-
-<Model::Inf>
-    connect_info        dbi:Oracle:host=expsvb05;sid=PSCM;port=1521
-    connect_info        wtscm2
-    connect_info        wtscm2
-    <connect_info>
-        LongReadLen     100000000
-        LongTruncOk     1
-    </connect_info>
-</Model::Inf>
 
 extjs2   /static/ext
 
@@ -82,31 +54,15 @@ extjs2   /static/ext
     </backends>
 </Plugin::Cache>
 
-<session>
-    expires 604800
-    cache_size 15m
+<Plugin::Session>
+    expires 4200
     verify_address 0
-</session>
+</Plugin::Session>
 
 # LDAP
 <authentication>
     default_realm ldap
     <realms>
-		<local>
-            <credential>
-				class Password
-				password_field password
-				password_type clear
-            </credential>
-			<store>
-				class Minimal
-				<users>
-					<root>
-						password admin
-					</root>
-				</users>
-			</store>
-		</local>
 		<none>
 			<credential>
                 class Password
