--- a/baseliner_ante.conf
+++ b/baseliner_ante.conf
@@ -1,21 +1,21 @@
-host alfsv053
-web_host alfsv053
+host alfsv061
+web_host alfsv061
 default_lang es
 user_case lc
 logo_filename logo_ante.png
+dec_key Honorificabilitudinitatibus
+db_retry -1	 # Infinito
+db_retry_frequency 15
 
-<email_override>
-	q74612x@correo.interno
-	infroox@correo.interno
-	infsbm@correo.interno
-	qbborro@correo.interno
-</email_override>
-
+email_override q74612x@correo.interno
+email_override infroox@correo.interno
+email_override infsbm@correo.interno
+email_override qbborro@correo.interno
 
 <Model::Baseliner>
-    connect_info        dbi:Oracle:host=alfsv053;sid=ALF0;port=1521
+    connect_info        dbi:Oracle:host=alfsv061;sid=ALF0;port=1521
     connect_info        wascm4
-    connect_info        wascm4
+    connect_info        __decrypt(vs2UkC5E3EDC)__
     <connect_info>
         LongReadLen     100000000
         LongTruncOk     1
@@ -23,9 +23,10 @@ logo_filename logo_ante.png
 </Model::Baseliner>
 
 <Model::Harvest>
-    connect_info        dbi:Oracle:host=alfsv053;sid=AISO;port=1522
+    connect_info        dbi:Oracle:host=alfsv061;sid=AISH;port=1521
     connect_info        wascm1
-    connect_info        wascm1
+    connect_info        __decrypt(WgVgVDeW2k7D)__
+    db_version          12
     <connect_info>
         LongReadLen     100000000
         LongTruncOk     1
@@ -33,44 +34,34 @@ logo_filename logo_ante.png
 </Model::Harvest>
 
 <Model::Inf>
-    connect_info        dbi:Oracle:host=alfsv053;sid=AISO;port=1522
+    connect_info        dbi:Oracle:host=alfsv061;sid=AISH;port=1521
     connect_info        wascm2
-    connect_info        wascm2
+    connect_info        __decrypt(2T1SjBXjZDuB)__
     <connect_info>
         LongReadLen     100000000
         LongTruncOk     1
     </connect_info>
 </Model::Inf>
 
+<session>
+    expires 4200
+    cache_size 15m
+    verify_address 0
+</session>
+
 <authentication>
     default_realm ldap
     <realms>
-                <local>
-            <credential>
-                                class Password
-                                password_field password
-                                password_type clear
-            </credential>
-                        <store>
-                                class Minimal
-                                <users>
-                                        <root>
-                                                password admin
-                                        </root>
-                                </users>
-                        </store>
-                </local>
-                <none>
-                        <credential>
-                class Password
-                password_field password
-                password_type none
-                        </credential>
-                        <store>
-                                class Null
-                        </store>
-                </none>
-
+        <none>
+                <credential>
+        class Password
+        password_field password
+        password_type none
+                </credential>
+                <store>
+                        class Null
+                </store>
+        </none>
         <ldap>
             <store>
                 binddn cn=vpscm,ou=TAM,o=BDE,c=es
