--- a/baseliner_prod.conf
+++ b/baseliner_prod.conf
@@ -1,14 +1,16 @@
-host expsv011
-web_host expsv011
+host expsv066
+web_host expsv066
 user_case lc
 saml_auth on
 saml_header samlv20
 logo_filename logo.png
+db_retry -1	 # Infinito
+db_retry_frequency 15
 
 dec_key 1234567
 
 <Model::Baseliner>
-    connect_info        dbi:Oracle:host=expsv004;sid=EXP0;port=1523
+    connect_info        dbi:Oracle:host=expsv065;sid=EXP0;port=1521
     connect_info        wpscm4
     connect_info        __decrypt(8gYogBpipO6B)__
     <connect_info>
@@ -18,9 +20,10 @@ dec_key 1234567
 </Model::Baseliner>
 
 <Model::Harvest>
-    connect_info        dbi:Oracle:host=expsvb05;sid=PSCM;port=1521
+    connect_info        dbi:Oracle:host=expsv064;sid=PSCM;port=1521
     connect_info        wpscm1
     connect_info        __decrypt(uOo5MBnET1rD8RVkAAk8UQbA)__
+    db_version          12
     <connect_info>
         LongReadLen     100000000
         LongTruncOk     1
@@ -28,7 +31,7 @@ dec_key 1234567
 </Model::Harvest>
 
 <Model::Inf>
-    connect_info        dbi:Oracle:host=expsvb05;sid=PSCM;port=1521
+    connect_info        dbi:Oracle:host=expsv064;sid=PSCM;port=1521
     connect_info        wpscm2
     connect_info        __decrypt(Pq/3yCZLeV0AMUT3cBXZGBKD)__
     <connect_info>
@@ -60,7 +63,7 @@ extjs2   /static/ext
 </Plugin::Cache>
 
 <session>
-    expires 604800
+    expires 4200
     cache_size 15m
     verify_address 0
 </session>
@@ -69,21 +72,6 @@ extjs2   /static/ext
 <authentication>
     default_realm ldap
     <realms>
-		<local>
-            <credential>
-				class Password
-				password_field password
-				password_type clear
-            </credential>
-			<store>
-				class Minimal
-				<users>
-					<admin>
-						password __decrypt(6gIh7D1ZLs8A)__
-					</admin>
-				</users>
-			</store>
-		</local>
 		<none>
 			<credential>
                 class Password
