--- a/baseliner_test.conf
+++ b/baseliner_test.conf
@@ -1,20 +1,23 @@
-host prusv053
-web_host prusv053
+host prusv063
+web_host prusv063
 default_lang es
 saml_auth on
 saml_header samlv20
 user_case lc
 logo_filename logo_test.png
+dec_key Honorificabilitudinitatibus
+db_retry -1	 # Infinito
+db_retry_frequency 15
 
-<email_override>
-	q74612x@correo.interno
-	infroox@correo.interno
-</email_override>
+email_override q74612x@correo.interno
+email_override infroox@correo.interno
+email_override infsbm@correo.interno
+email_override qbborro@correo.interno
 
 <Model::Baseliner>
-    connect_info        dbi:Oracle:host=prusv053;sid=TESA;port=1522
+    connect_info        dbi:Oracle:host=prusv069;sid=TESA;port=1522
     connect_info        wtscm4
-    connect_info        wtscm4
+    connect_info        __decrypt(4j5qOD1tlzlB)__
     <connect_info>
         LongReadLen     100000000
         LongTruncOk     1
@@ -22,10 +25,10 @@ logo_filename logo_test.png
 </Model::Baseliner>
 
 <Model::Harvest>
-    connect_info        dbi:Oracle:host=prusv059;sid=TISO;port=1521
+    connect_info        dbi:Oracle:host=prusv069;sid=TISH;port=1522
     connect_info        wtscm1
-    connect_info        wtscm1
-    db_version          7
+    connect_info        __decrypt(+wo/RD8DnLVD)__
+    db_version          12
     <connect_info>
         LongReadLen     100000000
         LongTruncOk     1
@@ -33,14 +36,20 @@ logo_filename logo_test.png
 </Model::Harvest>
 
 <Model::Inf>
-    connect_info        dbi:Oracle:host=prusv059;sid=TISO;port=1521
+    connect_info        dbi:Oracle:host=prusv069;sid=TISH;port=1522
     connect_info        wtscm2
-    connect_info        wtscm2
+    connect_info        __decrypt(seMUCAnYL2LB)__
     <connect_info>
         LongReadLen     100000000
         LongTruncOk     1
     </connect_info>
 </Model::Inf>
+
+<session>
+    expires 4200
+    cache_size 15m
+    verify_address 0
+</session>
 
 <authentication>
     default_realm ldap
@@ -57,6 +66,9 @@ logo_filename logo_test.png
 					<root>
 						password admin
 					</root>
+					<admin>
+					    password admin
+					</admin>
 				</users>
 			</store>
 		</local>
