--- a/baseliner.conf
+++ b/baseliner.conf
@@ -10,6 +10,13 @@ host localhost
 web_host localhost
 job_runner service.job.runner.simple.chain
 
+<job_new>
+  default_baseline XXXXX
+  form /xxx/xxx
+</job_new>
+
+
+
 <About>
     version 5.5 (build 53)
 </About>
