job_new y eventos ok

--- a/features/bde/bde.conf
+++ b/features/bde/bde.conf
@@ -28,4 +28,11 @@ db_retry_frequency 30   # a cada 30 segundos
     show_calendar 0
     show_lifecycle 0
     show_dashboard 0
+    show_no_cal 0
+    show_job_search_combo 1
 </site>
+
+<job_new>
+    default_baseline ANTE
+    approve_urgent 1
+</job_new>
