--- a/baseliner_ante.conf
+++ b/baseliner_ante.conf
@@ -14,7 +14,7 @@ email_override infaumx@correo.interno
 <Model::Baseliner>
     connect_info        dbi:Oracle:host=alfsv061;sid=ALF0;port=1521
     connect_info        wascm4
-    connect_info        __decrypt(vs2UkC5E3EDC)__
+    connect_info        __decrypt(R6LlaB/a91KCK7dNIAcOeoHA)__
     <connect_info>
         LongReadLen     100000000
         LongTruncOk     1
