cambio password prod

--- a/baseliner_prod.conf
+++ b/baseliner_prod.conf
@@ -4,13 +4,15 @@ user_case lc
 saml_auth on
 saml_header samlv20
 logo_filename logo.png
+db_retry -1	 # Infinito
+db_retry_frequency 15
 
 dec_key 1234567
 
 <Model::Baseliner>
     connect_info        dbi:Oracle:host=expsv065;sid=EXP0;port=1521
     connect_info        wpscm4
-    connect_info        __decrypt(8gYogBpipO6B)__
+    connect_info        __decrypt(KEYPBDdsqq6BqbjOHCzqo8jB)__
     <connect_info>
         LongReadLen     100000000
         LongTruncOk     1
@@ -29,7 +31,7 @@ dec_key 1234567
 </Model::Harvest>
 
 <Model::Inf>
-    connect_info        dbi:Oracle:host=expsvb05;sid=PSCM;port=1521
+    connect_info        dbi:Oracle:host=expsv064;sid=PSCM;port=1521
     connect_info        wpscm2
     connect_info        __decrypt(Pq/3yCZLeV0AMUT3cBXZGBKD)__
     <connect_info>
