--- a/features/bde/bde.conf
+++ b/features/bde/bde.conf
@@ -7,6 +7,7 @@ show_portal 1
 toolbar_height 42
 db_retry -1   # intentos de conexion a bbdd infinitos
 db_retry_frequency 30   # a cada 30 segundos
+job_runner service.job.runner.chained.rule
 
 <registry>
     disabled_key menu.reports
