--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "features/cvsscm"]
 	path = features/cvsscm
 	url = http://git.vasslabs.com/git/cvsscm.git
+[submodule "features/jazztel"]
+	path = features/jazztel
+	url = http://git.vasslabs.com/git/jazztel.git
