--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,24 @@
 [submodule "features/jazztel"]
 	path = features/jazztel
 	url = http://git.vasslabs.com/git/jazztel.git
+[submodule "features/bcv"]
+	path = features/bcv
+	url = http://git.vasslabs.com/git/bcv.git
+[submodule "features/powercenter"]
+	path = features/powercenter
+	url = http://git.vasslabs.com/git/powercenter.git
+[submodule "features/ca.harvest"]
+	path = features/ca.harvest
+	url = http://git.vasslabs.com/git/ca.harvest.git
+[submodule "features/cia"]
+	path = features/cia
+	url = http://git.vasslabs.com/git/cia.git
+[submodule "features/bde.core"]
+	path = features/bde.core
+	url = http://git.vasslabs.com/git/bde.core.git
+[submodule "features/sonar"]
+	path = features/sonar
+	url = http://git.vasslabs.com/git/sonar.git
+[submodule "features/checking"]
+	path = features/checking
+	url = http://git.vasslabs.com/git/checking.git
