GDF72594 - Incluir a Cherra en lista de correos

--- a/baseliner_ante.conf
+++ b/baseliner_ante.conf
@@ -10,6 +10,7 @@ email_override infroox@correo.interno
 email_override infsbm@correo.interno
 email_override qbborro@correo.interno
 email_override infaumx@correo.interno
+email_override infjrzx@correo.interno
 
 <Model::Baseliner>
     connect_info        dbi:Oracle:host=alfsv061;sid=ALF0;port=1521
