--- a/features/bde/bde.conf
+++ b/features/bde/bde.conf
@@ -10,6 +10,7 @@ db_retry_frequency 30   # a cada 30 segundos
 job_runner service.job.runner.chained.rule
 
 <registry>
+    disabled_key menu.job.release
     disabled_key menu.reports
     disabled_key menu.admin.mostrar_usuarios
     disabled_key menu.admin.features
