--- a/baseliner_ante.conf
+++ b/baseliner_ante.conf
@@ -4,13 +4,15 @@ default_lang es
 user_case lc
 logo_filename logo_ante.png
 dec_key Honorificabilitudinitatibus
+db_retry -1	 # Infinito
+db_retry_frequency 15
 
 email_override q74611x@correo.interno
+email_override q74612x@correo.interno
 email_override infroox@correo.interno
 email_override infsbm@correo.interno
 email_override qbborro@correo.interno
 email_override infaumx@correo.interno
-email_override infjrzx@correo.interno
 
 <Model::Baseliner>
     connect_info        dbi:Oracle:host=alfsv061;sid=ALF0;port=1521
@@ -23,7 +25,7 @@ email_override infjrzx@correo.interno
 </Model::Baseliner>
 
 <Model::Harvest>
-    connect_info        dbi:Oracle:host=alfsv061;sid=AISH;port=1521
+    connect_info        dbi:Oracle:host=alfsv061;sid=ASCM;port=1521
     connect_info        wascm1
     connect_info        __decrypt(WgVgVDeW2k7D)__
     db_version          12
@@ -34,7 +36,7 @@ email_override infjrzx@correo.interno
 </Model::Harvest>
 
 <Model::Inf>
-    connect_info        dbi:Oracle:host=alfsv061;sid=AISH;port=1521
+    connect_info        dbi:Oracle:host=alfsv061;sid=ASCM;port=1521
     connect_info        wascm2
     connect_info        __decrypt(2T1SjBXjZDuB)__
     <connect_info>
