default root password encryption

--- a/baseliner.conf
+++ b/baseliner.conf
@@ -88,7 +88,8 @@ extjs2   /static/ext
                 class Minimal
                 <users>
                     <root>
-                        password 21232f297a57a5a743894a0e4a801fc3
+                        # default is "admin"
+                        password f7ef7cb69c38a5e888a9cc5824fe8398
                     </root>
                 </users>
         </store>
