Optimización Semáforos y ultimos GDFs

--- a/features/bde/bde.conf
+++ b/features/bde/bde.conf
@@ -14,6 +14,11 @@ job_runner service.job.runner.chained.rule
     disabled_key menu.reports
     disabled_key menu.admin.mostrar_usuarios
     disabled_key menu.admin.features
+    disabled_key menu.admin.rule
+    disabled_key menu.admin.topic
+    disabled_key menu.admin.dashboard
+    disabled_key menu.tools
+    disabled_key menu.nature
 </registry>
 
 # bloqueamos la creación de pases con estos providers
