GDF #72705 y #72715 Arreglo Roles e Informe SSRS

--- a/features/bde/bde.conf
+++ b/features/bde/bde.conf
@@ -11,6 +11,7 @@ job_runner service.job.runner.chained.rule
 
 <registry>
     disabled_key menu.job.release
+    disabled_key menu.job.revisions
     disabled_key menu.reports
     disabled_key menu.admin.mostrar_usuarios
     disabled_key menu.admin.features
@@ -19,9 +20,12 @@ job_runner service.job.runner.chained.rule
     disabled_key menu.admin.dashboard
     disabled_key menu.tools
     disabled_key menu.nature
+    disabled_key menu.admin.core
+    disabled_key menu.admin.baseline
+    disabled_key menu.admin.service
 </registry>
 
-# bloqueamos la creación de pases con estos providers
+# bloqueamos la creacion de pases con estos providers
 <provider>
     disabled_class BaselinerX::Release::Provider::Release
     disabled_class BaselinerX::Provider::Changeset
