email overwrite y saml config

--- a/baseliner_prod.conf
+++ b/baseliner_prod.conf
@@ -1,13 +1,19 @@
 host expsv066
 web_host expsv066
-user_case lc
+default_lang es
 saml_auth on
 saml_header samlv20
+user_case lc
 logo_filename logo.png
+dec_key 1234567
 db_retry -1	 # Infinito
 db_retry_frequency 15
 
-dec_key 1234567
+email_override q74611x@correo.interno
+email_override q74612x@correo.interno
+email_override infroox@correo.interno
+email_override infsbm@correo.interno
+email_override infaumx@correo.interno
 
 <Model::Baseliner>
     connect_info        dbi:Oracle:host=expsv065;sid=EXP0;port=1521
