--- a/baseliner_prod.conf
+++ b/baseliner_prod.conf
@@ -1,12 +1,13 @@
 host expsv066
 web_host expsv066
+web_port 42999
 default_lang es
 saml_auth on
 saml_header samlv20
 user_case lc
 logo_filename logo.png
 dec_key 1234567
-db_retry -1	 # Infinito
+db_retry -1  # Infinito
 db_retry_frequency 15
 
 email_override q74611x@correo.interno
@@ -78,23 +79,18 @@ extjs2   /static/ext
 <authentication>
     default_realm ldap
     <realms>
-		<none>
-			<credential>
-                class Password
-                password_field password
-                password_type none
-			</credential>
-			<store>
-				class Null
-			</store>
-		</none>
-
-        <ldap>
+        <none>
             <credential>
                 class Password
                 password_field password
                 password_type none
-            </credential>        
+            </credential>
+            <store>
+                class Null
+            </store>
+        </none>
+
+        <ldap>
             <store>
                 binddn cn=vpscm,ou=TAM,o=BDE,c=es
                 bindpw f38cnla0ph4d6
